--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 nvm:
-  user: '{{ ansible_user_id }}'
-  version: v0.4.0
-  node_version: '0.10'
+  user: 'ec2-user'
+  version: v0.31.0
+  node_version: '5.7.1'
