--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
 - name: Install dependencies
-  apt: pkg={{ item }} update_cache=yes cache_valid_time=3600
+  sudo: yes
+  yum: name={{ item }} state=installed
   with_items:
     - git
     - curl
-    - build-essential
-    - libssl-dev
+    - gcc
+    - gcc-c++
+    - make
+    - openssl-devel
   tags: nvm
 
 - name: Install nvm
@@ -14,22 +17,24 @@
   git: repo=https://github.com/creationix/nvm.git dest=~/.nvm version={{ nvm.version }}
   tags: nvm
 
-- name: Source nvm in ~/.profile
+- name: Source nvm in ~/.bashrc
   sudo: yes
   sudo_user: "{{ nvm.user }}"
   lineinfile: >
-    dest=~/.profile
+    dest=~/.bashrc
     line="source ~/.nvm/nvm.sh"
     create=yes
   tags: nvm
 
 - name: Install {{ nvm.node_version }}
+  sudo: yes
   command: sudo -iu {{ nvm.user }} nvm install {{ nvm.node_version }}
   register: nvm_install_result
   changed_when: "'is already installed.' not in nvm_install_result.stdout"
   tags: nvm
 
 - name: Check if {{ nvm.node_version }} is the default node version
+  sudo: yes
   shell: sudo -iu {{ nvm.user }} nvm ls | grep -e 'default -> {{ nvm.node_version }}'
   register: nvm_check_default
   changed_when: False
@@ -37,6 +42,7 @@
   tags: nvm
 
 - name: Set default node version to {{ nvm.node_version }}
+  sudo: yes
   command: sudo -iu {{ nvm.user }} nvm alias default {{ nvm.node_version }}
   when: nvm_check_default|failed
   tags: nvm
